--- a/django-app.yml
+++ b/django-app.yml
@@ -3,11 +3,10 @@
 - name: Install nginx, postgresql, django
   hosts: aws
   remote_user: ubuntu
-  sudo: yes
+  become: yes
+  become_method: sudo
 
   roles:
-    - common
-    - postgresql
     - nginx
-    - gunicorn
-    - django
+    - db
+    - web
