--- a/roles/db/tasks/main.yml
+++ b/roles/db/tasks/main.yml
@@ -8,3 +8,17 @@
 
 - name: Ensure the PostgreSQL service is running
   service: name=postgresql state=started enabled=yes
+
+- name: Create user for django, demote from super user status
+  become_user: postgres
+  postgresql_user: name={{ db_user }} password={{ db_password }} role_attr_flags=CREATEDB,NOSUPERUSER
+
+- name: Ensure database is created
+  become_user: postgres
+  postgresql_db: name={{ db_name }}
+                 owner={{ db_user }}
+                 encoding='UTF-8'
+                 lc_collate='en_US.UTF-8'
+                 lc_ctype='en_US.UTF-8'
+                 template='template0'
+                 state=present
