role web: update virtualenv

--- a/roles/web/tasks/virtualenv.yml
+++ b/roles/web/tasks/virtualenv.yml
@@ -2,3 +2,10 @@
 
 - name: Install virtualenv
   pip: name=virtualenv
+
+- name: Create the virtualenv
+  command: virtualenv {{ virtualenv_path }} --no-site-packages
+           creates={{ virtualenv_path }}/bin/activate
+
+- name: Install gunicorn
+  pip: virtualenv={{ virtualenv_path }} name=gunicorn
