--- a/roles/nginx/tasks/main.yml
+++ b/roles/nginx/tasks/main.yml
@@ -1,6 +1,8 @@
 ---
+
 - name: Install Nginx
   apt: name=nginx state=present
+  tags: packages
 
-- name: Ensure the Nginx service is running
+- name: Ensure nginx service is running and enabled
   service: name=nginx state=started enabled=yes
